<resources>
    <string name="app_name">CvApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">About me</string>
    <string name="title_notifications">Experience</string>
    <string name="sysco">SysCoTech Club</string>
    <string name="board_member">Board member</string>
    <string name="internship">Internship</string>
    <string name="uni">Unimedia Solutions</string>
    <string name="_2022">2022 - current</string>
    <string name="_2020">2020 - 2021</string>
    <string name="career_note">Experienced Full-stack Software Engineer with a demonstrated history of working in the information technology and services industry.</string>
    <string name="work_experience"><b>Languages</b>: Javascript, Typescript, Ruby\n<b>Web Services</b>: REST API, Microservices\n<b>Frameworks</b>: ReactJS, Next.js, React Native, Express, Ruby On Rails, NodeJS \n<b>SDLC</b>: Agile/Scrum, Test-Driven Development
    </string>
    <string name="projects"><b>eXeLab</b>:Web application for gamers in Japan\n<b>TSHOP</b>:Online shopping platform in Mongolia.\n<b>ZoZo</b>:Online shopping platform that users can buy their clothes from China in Mongolia.\n<b>Election</b>:Election application of the president of Mongolia.</string>
    <string name="about_me">Experienced Full-stack Software Engineer with a demonstrated history of working in the information technology and services industry. Skilled in JavaScript, TypeScript, React.js, NextJS, React Native, SASS, Styled-Component, Bootstrap, CSS, AJAX, jQuery, Express, NodeJS, Ruby on Rails, Ruby, Databases, and Mobile Applications. Skilled at building products and solving problems with semantically and syntactically clean and readable code using the latest frameworks, web services, and design patterns.</string>
    <string name="about_me_label">About Me</string>
    <string name="education">Education</string>
    <string name="certification">Certificates</string>
    <string name="master_of_science_in_computer_science">Master of Science in Computer Science</string>
    <string name="maharishi_international_university">Maharishi International University</string>
    <string name="bachelor_of_science_in_computer_science">Bachelor of Science in Computer Science</string>
    <string name="sict_international_university">Science and Computer Technology University Mongolia</string>
    <string name="aws_solution">AWS Solution Architect</string>
    <string name="voluntary_work">Voluntary Work</string>
    <string name="k_force">K Force</string>
    <string name="full_stack">Full Stack Engineer</string>
    <string name="work_experience_label">Work Experience</string>
    <string name="kforce">Kforce</string>
    <string name="projects_label">Projects</string>
    <string name="hackerrank_engineer">Hackerrank Javascript engineer</string>
    <string name="_2018">2018</string>

    <string name="kidus_tekeste">Kidus Tekeste</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="career_note_label">Career Note</string>
    <string name="_2_5_2019">2/5/2019</string>
    <string name="github">GitHub</string>
    <string name="kidusmt">KidusMT</string>
    <string name="linkedin">LinkedIn</string>
    <string name="kidus_tekeste_linkedIn">kidus-tekeste</string>
    <string name="email">Email</string>
    <string name="ktekeste_miu_com">ktekeste@miu.com</string>
    <string name="phone">Phone</string>
    <string name="_314_583_9972">314-583-9972</string>
    <string name="my_contact">My Contact</string>
    <string name="my_twitter">https://twitter.com/adukidus</string>
    <string name="my_linkedin">https://www.linkedin.com/in/kidus-tekeste/</string>
    <string name="my_github">https://github.com/KidusMT</string>
    <string name="my_email">ktekeste@miu.edu</string>
    <string name="email_subject">MDP Course</string>
    <string name="email_body">Please, reach out to me for more information.</string>
    <string name="my_phone">tel:3145839972</string>
    <string name="intent_filter">mailto:</string>
    <string name="intent_key">web</string>
    <string name="linked_in_title">LinkedIn</string>
    <string name="twitter_in_title">Twitter</string>
    <string name="github_in_title">GitHub</string>
    <string name="_4_7_2019">4/7/2019</string>
    <string name="_3_8_2020">3/8/2020</string>
    <string name="_1_4_2019">1/4/2019</string>
    <string name="_8_9_2018">8/9/2018</string>
    <string name="setting">Setting</string>
    <string name="add">add</string>
    <string name="logout">Logout</string>
</resources>